2007-12-24  Satoshi Konno <skonno@cybergarage.org>
	* Added CG_UPNP_ST_URN and cg_upnp_st_isurn() to <ccontrol.h>.
	* Changed cg_upnp_device_ssdpmessagereceived() using cg_upnp_st_isurn() instead of cg_upnp_st_isurndevice() to find non standard UPnP devices.
	* Changed cg_upnp_service_ssdpmessagereceived() using cg_upnp_st_isurn() instead of cg_upnp_st_isurnservice() to find non standard UPnP devices.
	* Fixed cg_upnp_device_getservicebycontrolurl() to abort when the service_url is null.
	* Fixed cg_string_naddvalue() to comipler using other compilers normally.
	* Added cg_upnp_statevariable_setvaluewithoutnotify() not to send the updated value for other devices which subscribe the service of the state variable.
	* Deprecated cg_upnp_service_notifyallstatevariables(). Use cg_upnp_service_notifyall which can send the events individually or collectively.

2007-12-13  Aapo Makela <aapo.makela@nokia.com>
	* Multiple patches to fix crashes in out-of-memory situations
	* Implemented more efficient reallocation policy in CgString
	* Added proper control point locking in control point HTTP server

2007-11-16  Satoshi Konno <skonno@cybergarage.org>
	* Fixed cg_http_packet_read_body()not to lost data when the response packet is huge.

2007-10-22  Aapo Makela <aapo.makela@nokia.com>
	* Added deb-target to Makefile.am to build Debian packages
	* Fixed copyright notices in source files to match the copyright defined in COPYING
	* Added NULL check to cg_strtrimwhite()
	* Added NULL checks and fixed memory leaks in cg_net_selectaddr() and cg_net_gethostinterfaces()
	* Disabled "Expect" HTTP header because it causes IOP issues with some UPnP implementations.
	* Added NULL check to cg_xml_node_getchildnode() macro
	* Fixed Debian specific files and added debug package building

2007-10-02  Satoshi Konno <skonno@cybergarage.org>
	* Changed cg_thread_() to return FALSE when the specified object is null.
	* Added cg_http_server_lock() and cg_http_server_unlock().